[#14737] Add Infinispan version information to JGroupsAddress
Preparation

Signed-off-by: Pedro Ruivo <pruivo@redhat.com>